# motauron

./: .cursorrules  .gitignore  Cargo.toml  README.md  config.toml.example
backend/: .dockerignore  Cargo.toml  Dockerfile  config.toml.example
backend/src/: config.rs  main.rs
backend/src/application/ports/: mod.rs  notifier.rs  repository.rs  scraper.rs
backend/src/application/use_cases/: mod.rs  track_market.rs
backend/src/domain/: entities.rs  mod.rs  value_objects.rs
backend/src/domain/services/: merger.rs  mod.rs  scorer.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/api/: mod.rs
backend/src/infrastructure/notify/: mod.rs  ntfy_notifier.rs
backend/src/infrastructure/scrapers/: mod.rs  motorradhandel.rs  motoscout.rs
backend/src/infrastructure/store/: csv_repo.rs  firestore_repo.rs  json_repo.rs  mod.rs
docs/adr/: 0001-hexagonal-architecture.md  0002-frontend-architecture.md  0003-local-dev-mode.md
frontend/: .env.local.example  .firebaserc  package-lock.json  vite.config.js
frontend/src/: index.css
frontend/src/features/listings/: DealCard.css  DealCard.tsx  ListingsFeed.css  ListingsFeed.tsx  useListings.ts
frontend/src/pages/: DashboardPage.tsx
frontend/src/shared/: firebase.ts  types.ts
src/: config.rs  main.rs
src/models/: generations.rs  mod.rs  motorcycle.rs
src/notify/: mod.rs  ntfy.rs  state.rs
src/scoring/: mod.rs
src/scrapers/: autoscout24.rs  mod.rs  motorradhandel.rs
src/store/: mod.rs
