[package]
name = "motauron"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.2"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
chrono = { version = "0.4.43", features = ["serde"] }
serde_json = "1.0.149"
