[package]
name = "motauron"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["form", "json"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
chrono = { version = "0.4.43", features = ["serde"] }
serde_json = "1.0.149"
toml = "0.8"
async-trait = "0.1.89"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
firestore = "0.48.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
